--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -20,7 +20,7 @@
 
     <string-array name="menstruationTypes">
         <item>Нет</item>
-        <item>Есть, без доп. пометок</item>
+        <item>Да, без доп. пометок</item>
         <item>Скудные выделения</item>
         <item>Нормальные выделения</item>
         <item>Обильные выделения</item>
@@ -38,7 +38,7 @@
         <item>Нет</item>
         <item>Незащищенный</item>
         <item>Защищенный</item>
-        <item>Есть</item>
+        <item>Да</item>
     </string-array>
 
     <array name="sexDrawablesDark">
