--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="nextDay">Следующий день</string>
     <string name="prevDay">Предыдущий день</string>
     <string name="currentDay">Текущий день</string>
-    <string name="app_name">WomanCyc: Календарь женских циклов</string>
+    <string name="app_name">WomanCyc</string>
     <string name="lighttheme">Светлая тема</string>
     <string name="darktheme">Темная тема</string>
     <string name="help">Справка</string>
