--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -8,6 +8,8 @@
     <string name="prevDay">Предыдущий день</string>
     <string name="currentDay">Текущий день</string>
     <string name="app_name">WomanCyc</string>
+    <string name="widget_small_name">WomanCyc Small</string>
+    <string name="widget_medium_name">WomanCyc Medium</string>
     <string name="lighttheme">Светлая тема</string>
     <string name="darktheme">Темная тема</string>
     <string name="help">Справка</string>
