--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -42,6 +42,13 @@
     <string name="minValue">Минимальное значение</string>
     <string name="maxValue">Максимальное значение</string>
     <string name="firstDayOfCycle">Первый день цикла</string>
+    <string name="statisticRemark">
+<![CDATA[
+<i>Примечание.</i> В таблице учитываются данные по всем циклам, кроме последнего (по всем полным циклам).<br/>
+Расчет средней, максимальной и минимальной продолжительностей менструального цикла ведется только по  циклам, не превышающим %1$s дней.<br/>
+Продолжительность циклов, превышающая %2$s дней, в таблице выделяется красным.
+]]>
+    </string>
 
     <string-array name="menstruationTypes">
         <item>Нет</item>
