--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -15,17 +15,20 @@
     <string name="lighttheme">Светлая тема</string>
     <string name="darktheme">Темная тема</string>
     <string name="clearAllData">Сброс данных</string>
+    <string name="thereIsNoData">Данных нет</string>
     <string name="clearAllDataConfirmation">Удалить все данные?</string>
-    <string name="clearAllDataConfirmationMessage">Данные будут удалены без возможности восстановления</string>
-    <string name="restoreConfirmation">Восстановить данные?</string>
-    <string name="restoreConfirmationMessage">Все данные будут заменены новыми без возможности восстановления</string>
+    <string name="clearAllDataConfirmationMessage">Данные будут удалены без возможности восстановления. Создайте резервную копию данных, если необходимо.</string>
     <string name="statistic">Статистика</string>
     <string name="rate">Оценить приложение</string>
     <string name="marketNotFound">Приложение market не найдено</string>
     <string name="help">Справка</string>
     <string name="backupData">Экспортировать данные</string>
+    <string name="enterFileNameToWrite">Введите имя файла для экспорта</string>
+    <string name="defaultFileName">backup</string>
     <string name="dataExportSuccessfull">Данные экспортированы в файл %s</string>
     <string name="restoreData">Восстановить данные</string>
+    <string name="enterFileNameToRead">Выберите файл для импорта</string>
+    <string name="filesToReadNotFound">Файлы для импорта не найдены</string>
     <string name="dataImportSuccessfull">Данные восстановлены из файла %s</string>
     <string name="showDividers">Показывать разделители</string>
     <string name="clear">Очистить</string>
