--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <string name="pref_calculation_settings_title">Расчет</string>
+    <string name="pref_default_menstrual_cycle_len_title">Продолжительность менструального цикла</string>
+    <string name="pref_default_menstrual_cycle_len_summary">Продолжительность МЦ для прогноза. Если данных для расчета средней недостаточно</string>
+    <string name="pref_use_average_title">Использовать среднюю продолжительность МЦ для прогноза</string>
+    <string name="pref_use_average_summary">Средняя продолжительность МЦ берется за три месяца, не более %s дней</string>
     <string name="adUnitId">a151a5351deb085</string>
     <string name="nextMonth">Следующий месяц</string>
     <string name="prevMonth">Предыдущий месяц</string>
