--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <string name="openDataSourceTask">Загрузка базы данных</string>
+    <string name="restoreDataTask">Восстановление данных</string>
     <string name="pref_calculation_settings_title">Расчет</string>
     <string name="pref_default_menstrual_cycle_len_title">Продолжительность менструального цикла</string>
     <string name="pref_default_menstrual_cycle_len_summary">Продолжительность МЦ для прогноза %s. Если данных для расчета средней недостаточно</string>
