preferences, backup ui

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,11 +4,14 @@
     <string name="openDataSourceTask">Загрузка базы данных</string>
     <string name="restoreDataTask">Восстановление данных</string>
     <string name="pref_calculation_settings_title">Расчет</string>
-    <string name="pref_default_menstrual_cycle_len_title">Продолжительность менструального цикла</string>
-    <string name="pref_default_menstrual_cycle_len_summary">Продолжительность МЦ для прогноза %s. Если данных для расчета средней недостаточно</string>
-    <string name="pref_use_average_title">Использовать среднюю продолжительность МЦ для прогноза</string>
-    <string name="pref_use_average_summary">Средняя продолжительность МЦ берется за три месяца, не более %s дней</string>
+    <string name="pref_default_menstrual_cycle_len_title">Менструальный цикл</string>
+    <string name="pref_default_menstrual_cycle_len_summary">%s д. Используется для прогноза, если не установлена галочка \"Считать среднюю продолжительность\" или если данных для расчета средней продолжительности недостаточно.</string>
+    <string name="pref_use_average_title">Считать среднюю продолжительность</string>
+    <string name="pref_use_average_summary">Расчет средней продолжительности цикла ведется не более, чем по трем последним циклам, продолжительность которых не превышала %s дней.</string>
+    <string name="pref_ui_settings_title">Внешний вид</string>
     <string name="pref_theme_title">Тема</string>
+    <string name="pref_other_settings_title">Другое</string>
+    <string name="pref_childbirthdate">Расчет даты родов и срока беременности</string>
     <string name="adUnitId">a151a5351deb085</string>
     <string name="nextMonth">Следующий месяц</string>
     <string name="prevMonth">Предыдущий месяц</string>
