--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <string name="pref_password_title">Пароль</string>
+    <string name="passwordIsSet">Установлен</string>
+    <string name="passwordIsNotSet">Не задан</string>
+    <string name="enterPassword">Введите пароль</string>
+    <string name="enterNewPassword">Введите новый пароль</string>
+    <string name="enterOldPassword">Введите старый пароль</string>
+    <string name="incorrectPassword">Неверный пароль</string>
     <string name="bacupFileName">backup_%s</string>
     <string name="openDataSourceTask">Загрузка базы данных</string>
     <string name="restoreDataTask">Восстановление данных</string>
@@ -9,10 +16,11 @@
     <string name="pref_default_menstrual_cycle_len_summary">%s д. Используется для прогноза, если не установлена галочка \"Считать среднюю продолжительность\" или если данных для расчета средней продолжительности недостаточно.</string>
     <string name="pref_use_average_title">Считать среднюю продолжительность</string>
     <string name="pref_use_average_summary">Расчет средней продолжительности цикла ведется не более, чем по трем последним циклам, продолжительность которых не превышала %s дней.</string>
+    <string name="pref_safety_settings_title">Безопасность</string>
     <string name="pref_ui_settings_title">Внешний вид</string>
     <string name="pref_theme_title">Тема</string>
     <string name="pref_other_settings_title">Другое</string>
-    <string name="pref_childbirthdate">Расчет даты родов и срока беременности</string>
+    <string name="pref_childbirthdate">Дата родов и срок беременности</string>
     <string name="adUnitId">a151a5351deb085</string>
     <string name="nextMonth">Следующий месяц</string>
     <string name="prevMonth">Предыдущий месяц</string>
