--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <string name="menstrualCycleLen">Продолжительность менструального цикла</string>
+    <string name="days">д.</string>
     <string name="pref_password_title">Пароль</string>
     <string name="passwordIsSet">Установлен</string>
     <string name="passwordIsNotSet">Не задан</string>
     <string name="enterPassword">Введите пароль</string>
+    <string name="confirmPassword">Подтвердите пароль</string>
     <string name="enterNewPassword">Введите новый пароль</string>
     <string name="enterOldPassword">Введите старый пароль</string>
     <string name="incorrectPassword">Неверный пароль</string>
