--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -39,25 +39,24 @@
     <string name="clearAllData">Сброс данных</string>
     <string name="thereIsNoData">Данных нет</string>
     <string name="clearAllDataConfirmation">Удалить все данные?</string>
-    <string name="clearAllDataConfirmationMessage">Данные будут удалены без возможности восстановления. Создайте резервную копию данных, если необходимо.</string>
+    <string name="clearAllDataConfirmationMessage">Данные будут удалены без возможности восстановления. Сохраните данные в файл, если необходимо.</string>
     <string name="statistic">Статистика</string>
     <string name="rate">Оценить приложение</string>
     <string name="marketNotFound">Приложение market не найдено</string>
     <string name="help">Справка</string>
-    <string name="backupData">Экспортировать данные</string>
+    <string name="backupData">Сохранить данные</string>
     <string name="chooseFileNameToWrite">Выберите файл для экспорта</string>
     <string name="newFile">Новый файл&#8230;</string>
     <string name="enterFileNameToWrite">Введите имя файла для экспорта</string>
-    <string name="dataExportSuccessfull">Данные экспортированы в файл %s</string>
+    <string name="dataExportSuccessfull">Данные сохранены в файл %s</string>
     <string name="restoreData">Восстановить данные</string>
     <string name="chooseFileNameToRead">Выберите файл для импорта</string>
     <string name="filesToReadNotFound">Файлы для импорта не найдены</string>
     <string name="dataImportSuccessfull">Данные восстановлены из файла %s</string>
     <string name="restoreConfirmation">Восстановить данные из файла %s?</string>
-    <string name="restoreConfirmationMessage">Текущие данные будут заменены новыми</string>
+    <string name="restoreConfirmationMessage">Текущие данные будут заменены новыми. Сохраните данные в файл, если необходимо.</string>
     <string name="backupConfirmation">Файл %s существует</string>
     <string name="backupConfirmationMessage">Заменить содержимое файла?</string>
-    <string name="showDividers">Показывать разделители</string>
     <string name="clear">Очистить</string>
     <string name="close">Закрыть</string>
     <string name="today">Сегодня</string>
