--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,9 +7,9 @@
     <string name="passwordIsNotSet">Не установлен</string>
     <string name="enterPassword">Введите пароль</string>
     <string name="confirmPassword">Подтвердите пароль</string>
-    <string name="enterNewPassword">Введите новый пароль</string>
-    <string name="enterOldPassword">Введите старый пароль</string>
     <string name="incorrectPassword">Неверный пароль</string>
+    <string name="confirmationUnsuccess">Пароли не совпадают. Пароль не установлен</string>
+    <string name="confirmationSuccess">Пароль установлен</string>
     <string name="bacupFileName">backup_%s</string>
     <string name="openDataSourceTask">Загрузка базы данных</string>
     <string name="restoreDataTask">Восстановление данных</string>
