--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <string name="sendto_app_not_available">Приложение \"Почтовый клиент\" недоступно</string>
     <string name="days">д.</string>
     <string name="isSet">Установлен</string>
     <string name="isNotSet">Не установлен</string>
